Fix input label wrap

--- a/app/styles/base/util.css
+++ b/app/styles/base/util.css
@@ -1,3 +1,4 @@
 .text--center { text-align: center; }
 .text--left { text-align: left; }
 .text--right { text-align: right; }
+.text--nowrap { white-space: nowrap; }
